--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -30,6 +30,7 @@
 .hero-main-info {
   display: block;
   z-index: 5;
+  overflow: hidden;
 
   @media screen and (max-width: $mobile-max) {
     position: absolute;
