--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -30,7 +30,7 @@
   letter-spacing: 0.08em;
 }
 /*mobile*/
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .hero {
     padding-top: 50px;
   }
@@ -89,9 +89,9 @@
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and(max-width: 767px),
-  screen and (min-resolution: 192dpi) and (min-width: 320px) and(max-width: 767px),
-  screen and (min-resolution: 2dppx) and (min-width: 320px) and(max-width: 767px) {
+@media screen and (min-device-pixel-ratio: 2) and(max-width: 767px),
+  screen and (min-resolution: 192dpi) and(max-width: 767px),
+  screen and (min-resolution: 2dppx) and(max-width: 767px) {
   .hero-wave-box {
     background-image: url("../images/hero/hero-mobile@2x.png");
     background-size: 320px;
