--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -417,14 +417,6 @@
   }
 
   // =========2 секция=
-  // .comments {
-  //   display: flex;
-  // }
-
-  // .container_main_comment {
-  //   padding-left: 40px;
-  //   padding-right: 40px;
-  // }
   .comments__title {
     font-style: normal;
     font-weight: 800;
@@ -435,35 +427,6 @@
     margin-top: 50px;
     margin-bottom: 0;
   }
-  // .comments-list {
-  //   padding-top: 0;
-  //   margin-right: 111px;
-  //   margin-left: 187px;
-  // }
-  // .comments .comments-main-foto__main-foto {
-  //   min-width: 150px;
-  //   min-height: 150px;
-  // }
-
-  // .comments-list__name {
-  //   display: block;
-  //   font-style: normal;
-  //   font-weight: 800;
-  //   font-size: 30px;
-  //   line-height: 1.233;
-  //   letter-spacing: 0.08em;
-  //   margin-bottom: 10px;
-  //   color: var(--orange-color);
-  // }
-  // .comments-list .comments-list__info {
-  //   font-style: normal;
-  //   font-weight: 500;
-  //   font-size: 14px;
-  //   line-height: 1.214;
-  //   letter-spacing: 0.08em;
-  //   color: var(--grey-color);
-  //   margin-bottom: 10px;
-  // }
 
   .comments-list .comments-list-icon__vk {
     // outline: 1px solid green;
@@ -472,44 +435,22 @@
     margin-top: 20px;
     // margin-bottom: 120px;
   }
-  // .comments-list__description {
-  //   font-style: normal;
-  //   font-weight: 500;
-  //   font-size: 18px;
-  //   line-height: 1.555;
-  //   // text-align: center;
-  //   color: var(--mob-grey-color);
-  //   outline: 1px solid red;
-  //   // margin-bottom: 51px;
-  // }
 
-  // .comments-list__item {
-  //   padding-left: auto;
-  //   // padding-right: 112px;
-
-  //   text-align: left;
-  // }
-
-  // .comments-list__description span {
-  //   display: inline-block;
-  //   color: var(--orange-color);
-  //   text-decoration: underline;
-  // }
   // ==========================================================================================
   // ==========================================================================================
-
+  .comments-list {
+    width: 1090px;
+    justify-content: center;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+  }
   .mobile-comment-container {
+    position: relative;
     display: flex;
     justify-content: center;
-    // position: relative;
-    // box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
     padding-top: 50px;
-    // padding-left: 112px;
-    // padding-right: 112px;
-    // padding-bottom: 51px;
-
-    // margin-left: 190px;
-    // margin-right: 190px;
+    padding-right: 0;
+    padding-left: 0;
+    box-shadow: none;
   }
 
   .mobile-comment-container::before {
@@ -538,31 +479,14 @@
     // outline: 1px solid teal;
     background-image: url('../images/arrow_right.svg');
   }
-  // .container_main_comment {
-  //   // padding-left: 40px;
-  //   padding-right: 40px;
-  // }
-  // .comments__title {
-  //   font-style: normal;
-  //   font-weight: 800;
-  //   font-size: 46px;
-  //   line-height: 130%;
-  //   text-align: center;
-  //   letter-spacing: 0.03em;
-  //   margin-top: 50px;
-  //   margin-bottom: 30px;
-  // }
-  // .comments-list {
-  //   display: flex;
-  // }
-  // .comments .comments-main-foto__main-foto {
-  //   // outline: 1px solid green;
-  //   min-width: 150px;
-  //   min-height: 150px;
-  //   // margin-top: 50px;======================================
-  //   margin-right: auto;
-  //   margin-left: auto;
-  // }
+  .container_main_comment {
+    // padding-left: 215px;
+    padding-right: 40px;
+  }
+
+  .comments-list__item {
+    max-width: 706px;
+  }
   .comments-list__name {
     display: block;
     font-style: normal;
@@ -581,53 +505,20 @@
     line-height: 1.214;
     letter-spacing: 0.08em;
     color: var(--grey-color);
-    // margin-right: 380px;
-    // margin-bottom: 10px;
   }
 
-  // .comments-list .comments-list-icon__vk {
-  //   // outline: 1px solid green;
-  //   width: 30px;
-  //   height: 30px;
-  //   margin-top: 20px;
-  //   // margin-bottom: 20px;
-  //   margin-right: auto;
-  //   margin-left: auto;
-  // }
   .comments-list__description {
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 20px;
-    max-width: 706px;
-    // margin-right: 112px;
+    font-size: 18px;
+    line-height: 1.555;
+
+    margin-right: 112px;
     color: var(--mob-grey-color);
   }
 
-  // .comments-list__item {
-  //   padding-left: auto;
-  //   padding-right: 40px;
-  //   padding-bottom: 40px;
-  //   text-align: left;
-  // }
-
-  // .comments-list__description span {
-  //   // display: inline-block;
-  //   color: var(--orange-color);
-  //   text-decoration: underline;
-  // }
   // ==================================================
   // ==============================================================
-  // .comments-under__list {
-  //   display: flex;
-  //   // position: relative;
-  //   margin-right: 0;
-  //   margin-left: 0;
-  //   margin-top: 20px;
-  //   margin-bottom: 50px;
-  //   justify-content: center;
-  //   // outline: 1px solid red;
-  // }
 
   .comments-under__item:nth-child(-n + 7) {
     margin-right: 30px;
