сделал пиксализацию картинок

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,9 @@
 <header class="header">
     <!-- Игорь -->
     <div class="header-container">
-        <img src="./images/hero/logo.png" alt="логотип" class="header-logo">
+        <img src="./images/hero/logo.png" alt="логотип" class="header-logo" srcset="
+        ./images/hero/logo.png 640w, ./images/hero/logo@2x.png 1200w
+        " width="100%">
         <div class="header-buttons">
         <button type="button" class="header-burger"
                 data-menu-button>
