--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -28,19 +28,21 @@
             <img src="./images/hero/horn_mob.png" alt="">     
             </picture>
         </li>
-       <li>
-        <picture class="hero-jug">
-       <source srcset="./images/hero/milk_tab.png" media="(max-width:1279px") />
-       <source srcset="./images/hero/milk_deks.png" media="(min-width:1280px") />
-       <img src="./images/hero/milk_tab.png" alt="">     
-       </picture>
+       <li class="hero-jug">
+       <img alt="Cow" src="./images/hero/millk_tab.png" srcset="
+           ./images/hero/millk_desk@2x.png 2400w,
+           ./images/hero/millk_tab@2x.png 1536w,
+           ./images/hero/millk_desk.png 1280w,
+           ./images/hero/millk_tab.png 1000w
+            " width="100%" />
    </li>
-   <li>
-    <picture class="hero-women">
-   <source srcset="./images/hero/women_tab.png" media="(max-width:1279px") />
-   <source srcset="./images/hero/women_deks.png" media="(min-width:1280px") />
-   <img src="./images/hero/women_tab.png" alt="">     
-   </picture>
+   <li class="hero-women">
+   <img alt="Cow" src="./images/hero/woomen_tab.png" srcset="
+           ./images/hero/woomen_desk@2x.png 2400w,
+           ./images/hero/woomen_tab@2x.png 1536w,
+           ./images/hero/woomen_desk.png 1280w,
+           ./images/hero/woomen_tab.png 1000w
+            " width="100%" />
 </li>
          </ul>
          <ul class="hero-numbering">
