--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -17,6 +17,10 @@
 }
 .header{
      background-color: #FFB8CA;
+     &-logo{
+     width: 199px;
+     height: 50px;
+     }
      &-ul{
           list-style: none;
           font-family: DM Sans;
