--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -54,10 +54,14 @@
         position: absolute;
        top: 245px;
         left: 34px;
+        width: 124px;
+        height: 126px;
                       }
         @media screen and (min-width: 1280px) { 
         top: 435px;
-        left: 77px;                
+        left: 77px;  
+        width: 188px;
+        height: 191px;              
             }
         }
         &-women{
@@ -67,10 +71,14 @@
             position: absolute;
            top: 267px;
             right: 34px;
+            width: 168px;
+           height: 133px;
                           }
         @media screen and (min-width: 1280px) {  
             top: 438px;
-            right: 109px;}
+            right: 109px;
+            width: 293px;
+            height: 232px;}
                        }
     &-products, &-made{
           padding: unset;
