Ховер, фокус кнопки

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -37,6 +37,16 @@
   border: 2px solid #ff6b09;
   background: transparent;
   color: #ff6b09;
+
+  transition: color var(--anitation-function),
+    background-color var(--anitation-function);
+
+  &:hover,
+  &:focus {
+    color: white;
+    background-color: var(--accent-color);
+    border: 2px solid var(--accent-color);
+  }
 }
 
 .page-header .button {
