--- a/src/sass/components/_teacher.scss
+++ b/src/sass/components/_teacher.scss
@@ -1,5 +1,4 @@
 .teacher {
-  background-color: #e5e5e5;
   padding-top: 270px;
   &__list {
     width: 253px;
@@ -39,6 +38,8 @@
       margin-right: 10px;
       background-repeat: no-repeat;
       background-image: url('../images/icons/galka.svg');
+      animation: hinge; /* referring directly to the animation's @keyframe declaration */
+      animation-duration: 2s; /* don't forget to set a duration! */
     }
 
     @media screen and (max-width: 1343px) {
