добавил border на кнопку в hero

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -20,6 +20,9 @@
 .hero-text--orange {
   color: var(--accent-color);
 }
+.btn.hero-btn {
+  border: 2px solid var(--accent-color);
+}
 
 /***********************/
 .hero-service-list-text {
