--- a/src/sass/components/products/_products.scss
+++ b/src/sass/components/products/_products.scss
@@ -1,6 +1,9 @@
+.products {
+  background-color: #fff;
+}
 .container-products {
   padding: 100px 20px;
-  background-color: #fff;
+
   @extend %list;
   @media screen and (min-width: $tablet) {
     padding: 110px 35px;
@@ -51,9 +54,10 @@
 .products-list {
   display: block;
   width: 100%;
+  position: relative;
   @media screen and (min-width: $tablet) {
     display: flex;
-    position: relative;
+
     &:not(:last-child) {
       margin-right: 20px;
     }
@@ -69,6 +73,7 @@
   transform: translateY(-45%);
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: -60px;
   width: 250px;
   @media screen and (min-width: $tablet) {
     width: 220px;
@@ -129,7 +134,6 @@
 }
 .products-name {
   font-family: Titan One;
-  font-weight: bold;
   font-size: 20px;
   line-height: 1.15;
   @media screen and (min-width: $desktop) {
@@ -146,7 +150,7 @@
   margin-bottom: 30px;
 }
 .doted-svg {
-  fill: $main-white-color;
+  fill: var(--color2, #fff);
 }
 .about-ice-creame {
   font-weight: bold;
