--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="products">
     <div class="container container-products">
         <span class="second-name">100% natural</span>
         <h2 class="name-section">products</h2>
@@ -26,7 +26,7 @@
                         aliqua facilisis.
                     </p>
                     <button type="button" class="btn button">
-                        <svg class="arrow-svg" width="10" height="10">
+                        <svg class="arrow-svg" width="12" height="12">
                             <use href="./images/icons/symbol-defs.svg#arrow"></use>
                         </svg>
                     </button>
@@ -56,7 +56,7 @@
                         aliqua facilisis.
                     </p>
                     <button type="button" class="btn button">
-                        <svg class="arrow-svg" width="10" height="10">
+                        <svg class="arrow-svg" width="12" height="12">
                             <use href="./images/icons/symbol-defs.svg#arrow"></use>
                         </svg>
                     </button>
@@ -86,7 +86,7 @@
                         aliqua facilisis.
                     </p>
                     <button type="button" class="btn button">
-                        <svg class="arrow-svg" width="10" height="10">
+                        <svg class="arrow-svg" width="12" height="12">
                             <use href="./images/icons/symbol-defs.svg#arrow"></use>
                         </svg>
                     </button>
