--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -17,6 +17,13 @@
          height: 485px;
         }
 }
+
+.container {
+    @media screen and (min-width: 1280px) {
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
    
 .locations-list {
     position: relative;
@@ -30,7 +37,7 @@
         justify-content: space-between;
         margin-left: auto;
         margin-right: auto;
-        height: 605px;
+        height: 610px;
         padding-bottom: 61px;
         margin-bottom: 0 ;
     }
@@ -40,9 +47,9 @@
         justify-content: space-between;
         margin-left: auto;
         margin-right: auto;
-        height: 655px;
-        padding-bottom: 86px;
-        margin-bottom: 0;
+        height: 575px;
+        margin-bottom: 86px;
+        padding-bottom: 0;
     }
 }
     
@@ -70,6 +77,7 @@
         padding-left: 32px;
         padding-top: 50px;
         padding-bottom: 50px;
+        width: 210px;
     }
     @media screen and (min-width: 1280px) {
         width: 330px;
