Adds header and footer fixes after the merge.

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,12 +1,8 @@
-// .page-header {
-//   position: absolute;
-//   width: 100%;
-// }
-
 .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 30px;
 }
 
 .logo-main-container {
@@ -19,7 +15,6 @@
 .logo,
 .logo-dark {
   display: block;
-  padding-top: 30px;
 }
 
 .logo-dark {
@@ -71,28 +66,25 @@
 
 .menu-btn {
   display: block;
-  width: 20px;
-  height: 12px;
   margin: 0;
   padding: 0;
-  padding-top: 10px;
   border: none;
   z-index: 100;
   background-color: transparent;
   cursor: pointer;
-@media screen and(max-width:767px){
-  padding-top: 0;
-}
-  & .menu-close-icon {
-    display: none;
-  }
 
-  &.is-open .menu-close-icon {
-    display: block;
-  }
+  @media screen and(max-width: 1343px) {
+    & .menu-close-icon {
+      display: none;
+    }
 
-  &.is-open .menu-icon {
-    display: none;
+    &.is-open .menu-close-icon {
+      display: block;
+    }
+
+    &.is-open .menu-icon {
+      display: none;
+    }
   }
 
   @media screen and (min-width: 1344px) {
@@ -145,6 +137,10 @@
 }
 
 @media screen and (max-width: 767px) {
+  .logo-dark {
+    padding-top: 30px;
+  }
+
   .nav-btn {
     margin: 0 auto;
   }
@@ -175,7 +171,10 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1343px) {
-  .logo,
+  .nav-container {
+    padding-top: 40px;
+  }
+
   .logo-dark {
     padding-top: 40px;
   }
@@ -186,7 +185,6 @@
 
   .nav-btn.header-btn {
     display: block;
-    margin-top: 40px;
     margin-left: 235px;
     margin-right: 40px;
   }
@@ -238,6 +236,10 @@
     padding-top: 33px;
   }
 
+  .nav-container {
+    padding-top: 0;
+  }
+
   .menu {
     padding: 0;
     display: flex;
@@ -251,7 +253,6 @@
 
   .logo {
     padding: 0;
-    // padding-top: 45px;
   }
 
   .nav-btn {
