--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -1,7 +1,6 @@
 .footer {
   display: block;
   margin: 0 auto;
-  width: 100%;
   text-align: center;
   background-color: var(--primary-white-color);
 }
@@ -96,7 +95,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .logo {
+  .footer .logo {
     display: inline-block;
     padding-top: 30px;
     padding-bottom: 30px;
