commit on boxes1

--- a/src/sass/_boxes.scss
+++ b/src/sass/_boxes.scss
@@ -27,15 +27,11 @@
 }
 
 .boxes-list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 0;
+    list-style: none;
+    padding-left: 0;
     @media screen and (min-width: 768px) {
-        justify-content: space-between;
-    }
-    @media screen and (min-width: 1280px) {
-        justify-content: space-between;
+        display: flex;
+        justify-content: center;
     }
     .boxes-location-description,
     .boxes-address-item {
@@ -44,12 +40,22 @@
     .boxes-openhours-description {
         color: #FFA5BA
     }
-    // h3, h4 {
-    //     margin: 0;
-    // }
 
 .boxes-card {
     width: 220px;
+    margin: 0 auto;
+    @media screen and (min-width: 768px) {
+        margin-left: 0;
+        margin-right: 0;
+        &:not(:last-child) {
+            margin-right: 20px;
+        }
+    }
+    @media screen and (min-width: 1280px) {
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
 }
 
 .boxes-card-info {
@@ -103,12 +109,6 @@
         padding-top: 32px;
         padding-bottom: 32px;
     }
-    // .boxes-location-title {
-        // margin-bottom: 10px;
-    // }
-    // .weekend {
-        // margin-top: 10px;
-    // }
 
 .boxes-card-address {
     padding-top: 25px;
@@ -122,9 +122,9 @@
 .boxes-button-list {
     @media screen and (min-width: 768px) {
         display: flex;
+        justify-content: center;
     }
 }
-
 
 .boxes-button {
     display: flex;
@@ -145,6 +145,8 @@
         background: #D41342;
         @media screen and (min-width: 768px) {
             width: 191.45px;
+            margin: 0;
+            margin-right: 7px;
         }
         @media screen and (min-width: 1280px) {
             width: 198px;
@@ -156,6 +158,11 @@
                 margin-left: 13px;
             }
         }
+    &:hover,
+    &:focus {
+        background: #FFFFFF;
+        color: #D41342;
+    }
     }
     &.button-franchise {
         width: 160px;
@@ -164,6 +171,8 @@
         background: #FFFFFF;
         @media screen and (min-width: 768px) {
             width: 174px;
+            margin: 0;
+            margin-left: 7px;
         }
         @media screen and (min-width: 1280px) {
             width: 180px;
@@ -173,5 +182,10 @@
             font-size: 20px;
             margin-left: 13px;
         }
+    }
+    &:hover,
+    &:focus {
+        background: #D41443;
+        color: #FFFFFF;
     }
 }
