--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -1,11 +1,11 @@
 <section class="garants">    
         <h2 class="garant__title">Мы гарантируем</h2>
-    <div class="garants__container">
-        <div class="feature-list__container container">
+    <div class="garants__container container">
+        <div class="feature-list__container ">
             <ul class="feature-list list">                
                 <li class="feature-list__item">                                       
-                    <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-                        тестировании. Иначе мы вернем деньги. <span>*</span>
+                    <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании. Иначе мы вернем деньги. 
+                        <span>*</span>
                     </p>
                 </li>
                 <li class="feature-list__item">                    
