--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -238,8 +238,8 @@ html {
   &:hover,
   &:focus {
     outline: 0;
-    background-color: #ecebeb;
     transform: scale(1.1);
+    box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.6);
   }
   @media (min-width: $tablet) {
     width: 185px;
