--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import './layout/hero';
 @import './layout/description';
 @import './layout/programs';
+@import "./layout/feedback";
 // ==============BASE==============
 @import './base/common';
 @import './base/container';
