--- a/src/sass/layout/_methods.scss
+++ b/src/sass/layout/_methods.scss
@@ -1,3 +1,15 @@
+.methods{
+  padding-top: 198px;
+
+  @media screen and(min-width:768px){
+    padding-top: 202px;
+  }
+
+  @media screen and(min-width:1344px){
+    padding-top: 280px;
+  }
+}
+
 .methods-title {
   font-weight: 800;
   font-size: 20px;
