адаптивка под таблетку
делает адаптивку для таблетки и десктопа,остался вопрос с лейблом это по моему не svg а pmj и сделать полосочки

--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -66,8 +66,10 @@
         </div>
       </li>
     </ul>
-        <button class="button button-location">Our Locations</button>
-        <button class="button-secondary button-Franchise">Franchise</button>
+       <div class="button-box-location">
+          <button class="button button-location">Our Locations</button>
+          <button class="button-secondary button-Franchise">Franchise</button>
+       </div>
   </div>
 </section>
  
