--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -16,6 +16,10 @@
     background-color: #d41342;
     width: 181px;
     margin-bottom: 10px;
+
+    @include for-size(tablet) {
+      margin-right: 15px;
+    }
   }
 
   &.button-products {
@@ -45,6 +49,10 @@
 
   &.button-Franchise {
     width: 181px;
+
+    @include for-size(tablet) {
+      margin-left: 0;
+    }
   }
 
   &.button-how-it-do {
