--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -34,17 +34,21 @@
 
     @include for-size(tablet) {
       margin-left: 20px;
+      padding-left: 30px;
       min-width: 220px;
       max-width: calc((100% / 3) - 20px);
 
+      line-height: 1.66;
       font-size: 14px;
     }
     @include for-size(desktop) {
       margin-left: 30px;
+      padding-left: 40px;
       max-width: 330px;
       max-width: calc((100% / 3) - 30px);
 
-      font-size: 14px;
+      line-height: 1.83;
+      font-size: 16px;
     }
 
     & .description {
@@ -67,6 +71,8 @@
   & .title-card-location {
     margin-bottom: 10px;
 
+    line-height: 1.86;
+
     @include for-size(tablet) {
       margin-bottom: 14px;
     }
@@ -78,10 +84,19 @@
   & .work-time {
     display: flex;
     flex-wrap: wrap;
+
+    line-height: 1.86;
     color: $subtitleTextColor;
 
     &:not(:last-child) {
       margin-bottom: 10px;
+
+      @include for-size(tablet) {
+        margin-bottom: 16px;
+      }
+      @include for-size(desktop) {
+        margin-bottom: 15px;
+      }
     }
   }
 
@@ -91,5 +106,10 @@
 
   & .contact {
     color: $secondaryTextColor;
+  }
+}
+.button-box-location {
+  @include for-size(tablet) {
+    display: flex;
   }
 }
